# flashdesk

./: .gitignore  .prettierignore  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  package.json
.github/workflows/: desktop-release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: flash.rs  memory.rs  mod.rs  probe.rs  storage.rs
src-tauri/src/services/: firmware.rs  flash.rs  jobs.rs  memory.rs  mod.rs  probe.rs  storage.rs  target.rs
src/lib/api/: tauri.ts
src/lib/components/: AboutDialog.svelte  ActivityRail.svelte  ConfirmButton.svelte  HeaderBar.svelte  Icon.svelte  JobProgress.svelte  Popover.svelte  Segmented.svelte  StatusStrip.svelte  UpdateDialog.svelte
src/lib/features/control/: ControlView.svelte
src/lib/features/erase/: EraseView.svelte
src/lib/features/flash/: FlashView.svelte
src/lib/features/logs/: LogsView.svelte
src/lib/features/memory/: HexViewer.svelte  MemoryView.svelte  hex.ts
src/lib/features/tools/: ToolsPanel.svelte
src/lib/state/: activity-log.svelte.ts  jobs.svelte.ts  status.svelte.ts  target.svelte.ts  theme.svelte.ts  ui.svelte.ts  updates.svelte.ts
src/lib/styles/: components.css  tokens.css
src/lib/utils/: address.ts
src/routes/: +layout.ts  +page.svelte
